add: Added font 'Merienda'.

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@
 }
 
 body {
+	font-family: 'Merienda', cursive;
+	font-optical-sizing: auto;
+	font-weight: 400;
+	font-style: normal;
 	margin: 0;
 	padding: 20px;
 	min-width: 320px;
