--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,20 @@ body {
 	font-weight: 400;
 	font-style: normal;
 	margin: 0;
-	padding: 20px;
 	min-width: 320px;
 	min-height: 100vh;
+	overflow: hidden;
+}
+
+a,
+ul,
+li,
+h1,
+p {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	text-decoration: none;
+	color: inherit;
+	cursor: pointer;
 }
