--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,7 @@
 .header {
 	display: flex;
-	padding: 20px;
-	justify-content: space-between;
-	background-color: rgb(243, 238, 234);
 	align-items: center;
+	justify-content: space-between;
+	border-bottom: 1px solid var(--separator-color);
+	margin-bottom: 50px;
 }
