--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,9 +2,7 @@
 	background-color: var(--footer-color);
 	width: 100%;
 	height: 50px;
-	position: absolute;
-	bottom: 0;
-	left: 0;
+	margin-top: 50px;
 	color: var(--footer-text-color);
 }
 .footer-content {
