--- a/src/index.css
+++ b/src/index.css
@@ -9,13 +9,17 @@
 	--spinner-color: black;
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
 body {
 	font-family: var(--font);
 	font-weight: 400;
 	font-style: normal;
 	margin: 0 auto;
 	min-height: 100vh;
-	overflow: hidden;
+	overflow-x: hidden;
 }
 
 a,
@@ -37,4 +41,8 @@ a img {
 	margin: 0;
 	padding: 0;
 	border: none;
+}
+
+img {
+	image-rendering: pixelated;
 }
