--- a/src/pages/main/Main.module.css
+++ b/src/pages/main/Main.module.css
@@ -1,5 +1,47 @@
 .main {
 	display: flex;
-	flex-direction: column;
+	flex-wrap: wrap;
+	gap: 10px;
+	row-gap: 50px;
 	justify-content: space-between;
+	max-width: 900px;
+	margin: 0 auto;
+}
+
+.wrapper {
+	width: 280px;
+	height: 100%;
+}
+
+.photo {
+	width: 280px;
+	height: 350px;
+	object-fit: cover;
+	border-radius: 5px;
+	cursor: pointer;
+	transition: all 0.5s ease;
+}
+
+.photo:hover {
+	transform: scale(1.03);
+}
+
+.desc {
+	color: var(--text-color-paragraph);
+	font-size: 14px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	cursor: pointer;
+}
+
+.icon {
+	width: 20px;
+	height: 20px;
+}
+
+.item {
+	display: flex;
+	align-items: center;
+	gap: 10px;
 }
