--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@
 	--separator-color: black;
 	--text-color-hover: grey;
 	--spinner-color: black;
+	--scrollbar-color: black;
+	--scrollbar-color-background: rgb(206, 206, 206);
 }
 
 html {
@@ -41,4 +43,16 @@ a img {
 	margin: 0;
 	padding: 0;
 	border: none;
+}
+
+body::-webkit-scrollbar {
+	width: 14px;
+}
+
+body::-webkit-scrollbar-thumb {
+	background-color: var(--scrollbar-color);
+}
+
+body::-webkit-scrollbar-track {
+	background-color: var(--scrollbar-color-background);
 }
