--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -8,12 +8,20 @@
 .footer-content {
 	display: flex;
 	max-width: 900px;
+	min-width: 320px;
 	height: 100%;
 	justify-content: space-between;
 	align-items: center;
 	margin: 0 auto;
+	padding: 0px 10px;
 }
 
 .footer-text {
 	font-size: 12px;
+}
+
+@media screen and (max-width: 430px) {
+	.footer-logo {
+		display: none;
+	}
 }
