--- a/src/pages/main/Main.module.css
+++ b/src/pages/main/Main.module.css
@@ -45,3 +45,9 @@
 	align-items: center;
 	gap: 10px;
 }
+
+@media screen and (max-width: 900px) {
+	.main {
+		justify-content: space-evenly;
+	}
+}
