feat: Photo filter

--- a/src/components/MenuList/MenuList.module.css
+++ b/src/components/MenuList/MenuList.module.css
@@ -1,4 +1,4 @@
-/* .main {
+.main {
 	display: flex;
 	flex-wrap: wrap;
 	gap: 10px;
@@ -50,4 +50,4 @@
 	.main {
 		justify-content: space-evenly;
 	}
-} */
+}
