--- a/src/pages/PhotoCard/Photo.module.css
+++ b/src/pages/PhotoCard/Photo.module.css
@@ -1,11 +1,10 @@
 .photo-card {
 	display: flex;
-	justify-content: space-between;
 	align-items: flex-start;
 	padding-top: 50px;
 	position: relative;
 	height: 100vh;
-	gap: 20px;
+	gap: 50px;
 }
 
 .photo {
@@ -19,4 +18,23 @@
 	position: absolute;
 	right: 0;
 	top: 0;
+}
+
+.photo_desc {
+	color: var(--text-color-paragraph);
+	display: flex;
+	align-items: start;
+	gap: 30px;
+	flex-direction: column;
+	justify-content: flex-start;
+}
+
+.photo_item {
+	display: flex;
+	align-items: flex-end;
+	gap: 10px;
+}
+
+.icon {
+	width: 30px;
 }
