--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,3 +5,9 @@
 	border-bottom: 1px solid var(--separator-color);
 	margin-bottom: 25px;
 }
+
+@media screen and (max-width: 468px) {
+	.header {
+		flex-direction: column;
+	}
+}
