--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -19,3 +19,8 @@
 	justify-content: space-between;
 	align-items: center;
 }
+.links {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
