--- a/src/pages/Register/Register.module.css
+++ b/src/pages/Register/Register.module.css
@@ -1,1 +1,26 @@
+.login {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+	flex-direction: column;
+	gap: 30px;
+}
 
+.form {
+	display: flex;
+	flex-direction: column;
+	gap: 30px;
+}
+
+.field {
+	display: flex;
+	gap: 30px;
+	justify-content: space-between;
+	align-items: center;
+}
+.links {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
