--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,17 +1,17 @@
 .button {
 	font-family: inherit;
 	cursor: pointer;
-	transition: background 0.25s;
+	transition: background 1s;
 	border: 1px solid grey;
 	color: var(--white-color);
-	border-radius: 29px;
+	border-radius: 10px;
 	font-style: normal;
 	font-weight: 400;
-	font-size: 15px;
+	font-size: 16px;
 	text-transform: uppercase;
 	padding: 20px 60px;
 }
 
 .button:hover {
-	background: var(--primary-hover-color);
+	background: var(--scrollbar-color-background);
 }
