--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -6,11 +6,14 @@
 .list {
 	display: flex;
 	gap: 30px;
-	align-items: center;
+	align-items: baseline;
 }
 
 .link {
 	transition: all 0.5s ease;
+	display: flex;
+	align-items: baseline;
+	gap: 10px;
 }
 
 .active {
