feat: Added counter for favorites photos

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 	--spinner-color: black;
 	--scrollbar-color: black;
 	--scrollbar-color-background: rgb(206, 206, 206);
+	--primary-color: rgb(223, 143, 51);
 }
 
 html {
