feat:Added prettier

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-	--font: 'Bodoni Moda', serif;
+	--font: "Bodoni Moda", serif;
 	--footer-color: black;
 	--footer-text-color: white;
 	--text-color: black;
