--- a/src/index.css
+++ b/src/index.css
@@ -61,3 +61,14 @@ body::-webkit-scrollbar-thumb {
 body::-webkit-scrollbar-track {
 	background-color: var(--scrollbar-color-background);
 }
+
+@media (hover: none), (hover: on-demand) {
+	*:hover {
+		background-color: inherit !important;
+		color: inherit !important;
+		text-decoration: none !important;
+		transform: none !important;
+		box-shadow: none !important;
+		border: inherit !important;
+	}
+}
