--- a/src/pages/Photo/Photo.module.css
+++ b/src/pages/Photo/Photo.module.css
@@ -4,7 +4,7 @@
 	padding-top: 50px;
 	position: relative;
 	height: 100vh;
-	gap: 50px;
+	gap: 20px;
 }
 
 .photo {
@@ -27,6 +27,7 @@
 	gap: 30px;
 	flex-direction: column;
 	justify-content: flex-start;
+	width: 100%;
 }
 
 .photo_item {
@@ -37,4 +38,21 @@
 
 .icon {
 	width: 30px;
+}
+
+@media screen and (max-width: 468px) {
+	.icon {
+		width: 20px;
+	}
+	.photo_desc {
+		font-size: 16px;
+		padding-left: 20%;
+	}
+	.photo {
+		width: 280px;
+	}
+	.photo-card {
+		flex-direction: column;
+		align-items: center;
+	}
 }
