--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -9,4 +9,13 @@
 	border-radius: 10px;
 	padding: 20px;
 	outline: none;
+	transition: border-color 0.3s ease;
+}
+
+.input:focus {
+	border-color: var(--primary-color);
+}
+
+.input.error {
+	border-color: red;
 }
