--- a/src/pages/Register/Register.module.css
+++ b/src/pages/Register/Register.module.css
@@ -19,8 +19,15 @@
 	justify-content: space-between;
 	align-items: center;
 }
+
 .links {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+}
+
+.error {
+	color: red;
+	font-size: 14px;
+	text-align: center;
 }
