--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -8,10 +8,6 @@
 	font-style: normal;
 	font-weight: 400;
 	font-size: 16px;
-	text-transform: uppercase;
-	padding: 20px 60px;
-}
-
-.button:hover {
-	background: var(--scrollbar-color-background);
+	padding: 16px 24px;
+	background: var(--primary-color);
 }
