--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -24,3 +24,25 @@
 	flex-direction: column;
 	align-items: center;
 }
+
+.link {
+	position: relative;
+	text-decoration: none;
+	display: inline-block;
+}
+
+.link::after {
+	content: "";
+	position: absolute;
+	left: 50%;
+	bottom: -2px;
+	width: 0;
+	height: 2px;
+	background: var(--primary-color);
+	transform: translateX(-50%);
+	transition: width 1s ease;
+}
+
+.link:hover::after {
+	width: 100%;
+}
